# apollo11

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  meson.build
apollo11_daemon/src/: daemon.vala
apollo11_switchboard/: CMakeLists.txt
apollo11_switchboard/src/: plug.vala
data/: apollo11.app.desktop  apollo11.desktop  com.github.nine-h.apollo11.appdata.xml  com.github.nine-h.apollo11.gschema.xml
po/: apollo11.pot
src/: apollo11.vala  header.vala  hello_houston.vala  window.vala  window.vala~
